examples/pos/capture/borrows.effekt
module borrow

interface Borrowed[T] {
  def dereference(): T
}

def main() = {
  var counter = 22;
  val p : Borrowed[Int] at {counter} = new Borrowed[Int] {
    def dereference() = counter
  };
  counter = counter + 1;
  println(p.dereference)
}