examples/neg/issue512.effekt
interface Ref[T] {
  def get(): T
}

def main() = {
  var myref =
    region r1 { // ERROR not allowed
      var x in r1 = "hoho";
      new Ref[String] {
        def get() = x
      }
    }
  println(myref.get())
}